--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,20 @@
-title=Title
-appTitle=Main
+#--- Home View ---
+title=Watch Movies
+appTitle=MovieApp
 appDescription=App Description
+calTitle=Showtimes
+imageTooltip==Movie illustration
+labelCity=City
+cityPLaceholder=Enter City
+labelGenre=Genre
+buttonMovieSearch=Find Movie
+calendarTitle=Showtimes
+search=Searching...
+titleForm=Find Movies
+footerLink=Explore the IMDb Movie Database
+messageToast=Do you feel like going to the movies?
+genreAll=All
+genreAction=Action
+genreHorror=Horror
+genreScienceFiction=Science Fiction
+
