--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,9 +3,9 @@ title=Watch Movies
 appTitle=MovieApp
 appDescription=App Description
 calTitle=Showtimes
-imageTooltip==Movie illustration
+imageTooltip=Movie illustration
 labelCity=City
-cityPLaceholder=Enter City
+cityPlaceholder=Enter City
 labelGenre=Genre
 buttonMovieSearch=Find Movie
 calendarTitle=Showtimes
