--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -18,3 +18,10 @@ genreAction=Action
 genreHorror=Horror
 genreScienceFiction=Science Fiction
 
+#~~~ Detail View ~~~~~~~~~~~~~~~~~~~~~~~~~~
+cinemaName=Cinema Name
+cinemaAddress=Cinema Address
+special=Special of the Day
+technicalDetails=Technical Details
+seats=Seats
+
